--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_515b4a275835cf6"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "-": "^0.0.1",
+    "@tailwindcss/vite": "^4.0.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
@@ -26,14 +30,18 @@
     "@storybook/react": "^8.5.3",
     "@storybook/react-vite": "^8.5.3",
     "@storybook/test": "^8.5.3",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "chromatic": "^11.25.2",
     "eslint": "^9.17.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "^8.5.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
